<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Lab3</string>
    <string name="textView1">Enter your email address: </string>
    <string name="textView2">Type your password:</string>
    <string name="button">Login</string>
    <string name="yourprofile">Your profile</string>
    <string name="yourname">Your name:</string>
    <string name="youremail">Your email:</string>
    <string name="yourpicture">Your picture</string>
    <string name="clickthebuttontotakeapicture">Click the button above to take a picture</string>
    <string name="enteryourname">Enter your name</string>
    <string name="enteryouremail">Enter your email</string>
    <string name="addButton">Go to chat</string>
    <string name="sendButton">SEND</string>
    <string name="typeHere">Type here</string>
    <string name="receiveButton">RECEIVE</string>
    <string name="goToChatRoom">Go to chat room</string>
    <string name="typeemailhere">Type email here</string>
    <string name="weatherForecast">WeatherForecast</string>
    <string name="goToToolbarPage" >goToToolbarPage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item1" />
    <string name="item2" />
    <string name="item3" />
    <string name="item4" />
    <string name="search" />


</resources>