<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity"
>

    <ListView
        android:id = "@+id/thelistID"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

    <Button
        android:id = "@+id/sendButton"
        android:layout_width = "wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/sendButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"

        />


        <EditText
            android:id="@+id/typeHere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/typeHere"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/sendButton"/>

    <Button
        android:id="@+id/receiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receiveButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        />



</RelativeLayout>